Import of BINGOS/Env-Sanctify-Moosified-1.06 from CPAN.
gitpan-cpan-distribution: Env-Sanctify-Moosified
gitpan-cpan-version:      1.06
gitpan-cpan-path:         BINGOS/Env-Sanctify-Moosified-1.06.tar.gz
gitpan-cpan-author:       BINGOS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 NAME
     Env::Sanctify::Moosified - Lexically scoped sanctification of %ENV
 
+VERSION
+    version 1.06
+
 SYNOPSIS
       my $sanctify = Env::Sanctify::Moosified->consecrate( sanctify => [ '^POE' ] );
 
@@ -8,7 +11,7 @@ SYNOPSIS
 
       $sanctify->restore
 
-      { 
+      {
 
         my $sanctify = Env::Sanctify::Moosified->consecrate( env => { POE_TRACE_DEFAULT => 1 } );
 
@@ -35,8 +38,12 @@ CONSTRUCTOR
         Creates an Env::Sanctify::Moosified object. Takes two optional
         arguments:
 
-          'env', a hashref of env vars to add to %ENV;
-          'sanctify', an arrayref of regex pattern strings to match against current %ENV vars;
+        "env"
+            A hashref of env vars to add to %ENV.
+
+        "sanctify"
+            An arrayref of regex pattern strings to match against current
+            %ENV vars;
 
         Any %ENV var that matches a "sanctify" regex is removed from the
         resultant %ENV.
@@ -48,12 +55,11 @@ METHODs
         scope.
 
 AUTHOR
-    Chris "BinGOs" Williams <chris@bingosnet.co.uk>
+    Chris Williams <chris@bingosnet.co.uk>
 
-LICENSE
-    Copyright © Chris Williams
+COPYRIGHT AND LICENSE
+    This software is copyright (c) 2013 by Chris Williams.
 
-    This module may be used, modified, and distributed under the same terms
-    as Perl itself. Please see the license that came with your Perl
-    distribution for details.
+    This is free software; you can redistribute it and/or modify it under
+    the same terms as the Perl 5 programming language system itself.
 
